--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,9 @@ jobs:
           go-version: 1.15
         id: go
 
+      - name: Install wire
+        run: go get github.com/google/wire/cmd/wire
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@master
         with:
