--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -36,3 +36,15 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
+release:
+  github:
+    disable: false
+  # If set to auto, will mark the release as not ready for production
+  # in case there is an indicator for this in the tag e.g. v1.0.0-rc1
+  # If set to true, will mark the release as not ready for production.
+  # Default is false.
+  prerelease: auto
+
+  # You can change the name of the GitHub release.
+  # Default is `{{.Tag}}`
+  name_template: "{{.ProjectName}}-v{{.Version}}"
