--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
           go-version: 1.16
       -
         name: Install wire
-        run: go install github.com/google/wire/cmd/wire
+        run: go mod download
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
