--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -20,12 +20,17 @@ builds:
       - goos: darwin
         goarch: 386
 archives:
-  - replacements:
+  -
+    name_template: "ioj-server_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+    replacements:
 #      darwin: Darwin
 #      linux: Linux
 #      windows: Windows
       386: i386
 #      amd64: x86_64
+    format_overrides:
+      - goos: windows
+        format: zip
 checksum:
   name_template: 'checksums.txt'
 snapshot:
