--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -42,6 +42,10 @@ changelog:
       - '^docs:'
       - '^test:'
 release:
+  github:
+    owner: infinity-oj
+    name: server-v2
+
   # If set to auto, will mark the release as not ready for production
   # in case there is an indicator for this in the tag e.g. v1.0.0-rc1
   # If set to true, will mark the release as not ready for production.
