--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -54,4 +54,4 @@ release:
 
   # You can change the name of the GitHub release.
   # Default is `{{.Tag}}`
-  name_template: "{{.ProjectName}}-v{{.Version}}"
+  name_template: "ioj-server-v{{.Version}}"
